--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "decay",
+  "homepage": "http://135.125.201.138/decay/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
