--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decay",
-  "homepage": "http://135.125.201.138/decay/",
+  "homepage": "/",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
